basicApp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: basicapp
  name: basicapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basicapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: basicapp-sidecar-collector 
      labels:
        app: basicapp
    spec:
      containers:
      - image: localhost:5000/basicapp:0.1
        name: basicapp
        resources: 
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 50Mi
        livenessProbe:
          httpGet:
            path: /rolldice
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /rolldice
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10  
---
apiVersion: v1
kind: Service
metadata:
  name: basicapp
spec:
  selector:
    app: basicapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /basic(/|$)(.*)
        backend:
          service:
            name: basicapp
            port:
              number: 8080
---
